# rust-dhcp

./: .gitignore  Cargo.toml
arp/: Cargo.toml  build.rs
arp/src/: lib.rs  linux.rs  windows.rs
client/: Cargo.toml
client/examples/: linux_client.rs
client/src/: backoff.rs  builder.rs  client.rs  forthon.rs  lib.rs  macros.rs  state.rs
framed/: Cargo.toml
framed/src/: lib.rs  socket.rs
integration_tests/: Cargo.toml
integration_tests/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/v4/: deserializer.rs  mod.rs  serializer.rs  validator.rs
protocol/src/v4/options/: message_type.rs  mod.rs  option_tag.rs
server/: Cargo.toml
server/examples/: server.rs
server/src/: bpf.rs  builder.rs  database.rs  lib.rs  macros.rs  server.rs  storage.rs  storage_ram.rs
switchable_socket/: Cargo.toml
switchable_socket/src/: dummy.rs  impl_linux.rs  impl_not_linux.rs  lib.rs  linux.rs  socket.rs
