[package]
name = "dhcp-client"
version = "0.2.0"
authors = ["hedgar <hedgar2017@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.3"
tokio = { version = "1.4", features = ["time", "rt"] }
futures = "0.3"
bytes = "0.4.8"
eui48 = "0.4.1"
hostname = "0.1.5"
rand = "0.6.1"
dhcp-protocol = { path = "../protocol" }
dhcp-framed = { path = "../framed" }
switchable-socket = { path = "../switchable_socket"}
net2 = "0.2.33"
pin-project = "1.0"

[dev-dependencies]
env_logger = "0.6.0"
ifcontrol = { git = "https://github.com/glebpom/rust-netif", rev="master" }
