[package]
name = "dhcp-framed"
version = "0.1.0"
edition = "2018"
authors = ["hedgar <hedgar2017@gmail.com>"]

[dependencies]
tokio = "1.4"
futures = "0.3.13"
net2 = "0.2.33"
dhcp-protocol = { path = "../protocol" }
switchable-socket = { path = "../switchable_socket"}
log = "0.4.3"
pin-project = "1.0"
