[package]
name = "dhcp-server"
version = "0.2.0"
authors = ["hedgar <hedgar2017@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.3"
tokio = { version = "1.4", optional = true }
futures = "0.3.13"
bytes = "0.4.8"
hostname = "0.1.5"
chrono = "0.4.4"
failure = "0.1.1"
dhcp-protocol = { path = "../protocol" }
dhcp-framed = { path = "../framed" }
pin-project = "1.0"

[target.'cfg(any(target_os="freebsd", target_os="macos"))'.dependencies]
netif-bpf = { git = "https://github.com/glebpom/rust-netif", rev="master" }
ifcontrol = { git = "https://github.com/glebpom/rust-netif", rev="master" }
tokio = { version = "1.4", features = ["rt"] }
eui48 = "0.4.1"
etherparse = "0.7.1"
arrayref = "0.3.4"

[target.'cfg(any(target_os="linux", target_os="windows"))'.dependencies]
dhcp-arp = { path = "../arp" }
tokio = "1.4"

[target.'cfg(target_os="windows")'.dependencies]
tokio = { version = "1.4", features = ["process"] }

[dev-dependencies]
env_logger = "0.5.10"

[features]
example = ["tokio/macros", "tokio/rt-multi-thread"]

[[example]]
name = "server"
required-features = ["example"]