[package]
name = "switchable-socket"
version = "0.1.0"
authors = ["hedgar <hedgar2017@gmail.com>", "red75prim <red75prim@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1.7"
futures = "0.1.21"
net2 = "0.2.33"
log = "0.4.3"
etherparse = "0.8.2"
libc = "0.2.57"
mio = "0.6.19"

[features]
max_level_info = ["log/max_level_info"]
