[package]
name = "switchable-socket"
version = "0.3.0"
authors = ["hedgar <hedgar2017@gmail.com>", "red75prim <red75prim@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5", features = ["net", "rt" ] }
futures = "0.3.13"
net2 = "0.2.33"
log = "0.4.3"
etherparse = "0.9.0"
libc = "0.2.57"
mio = "0.7.11"

[features]
max_level_info = ["log/max_level_info"]
